--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             margin-right: 4px;
             width: 173px;
             height: 20px;
-            background-color: gray;
+            background-color: red;
             text-align: center;
             border: 2px solid black;
         }
@@ -26,7 +26,7 @@
             margin-right: 4px;
             width: 173px;
             height: 20px;
-            background-color: gray;
+            background-color: red;
             text-align: center;
             border: 2px solid black;
         }
@@ -37,7 +37,7 @@
             margin-right: 4px;
             width: 173px;
             height: 20px;
-            background-color: gray;
+            background-color: rgb(10, 102, 10);
             text-align: center;
             border: 2px solid black;
         }
@@ -47,7 +47,7 @@
             padding: 0px;
             width: 173px;
             height: 20px;
-            background-color: gray;
+            background-color: rgb(10, 102, 10);
             text-align: center;
             border: 2px solid black;
         }
